added media queries and new pictures to the articles

--- a/code/index.html
+++ b/code/index.html
@@ -3,108 +3,102 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- Change the title below -->
-  <title>Bake News</title>
+  <title>The Sweet Scoop</title>
   <link rel="stylesheet" href="./style.css" />
   <!--favicon image-->
   <link rel="icon" type="image.png" href="assets/cakelogo_favicon.png" />
-  <!-- don't forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 
   <header>
-    <!-- Logotype -->
+    <!-- Logotype and heading-->
     <div>
       <img src="assets/cakelogo.png"
         alt="cake logo"><!--Cake icons created by Nur syifa fauziah - Flaticon,https://www.flaticon.com-->
-      <h2>Bake News</h2>
+      <h1>The Sweet Scoop</h1>
     </div>
-    <!-- Navigation bar -->
+
+    <!-- Navigation bar-->
+
     <nav>
-      <ul class="nav-links">
+      <ul class="nav-list">
         <li><a href="https://www.barry-callebaut.com/en/manufacturers/trends-insights/top-6-trends-watch-bakery"
-            target="_blank">Trends</a>
-        </li>
+            target="_blank">Trends</a></li>
         <li><a href="https://www.allrecipes.com/recipes/276/desserts/cakes/" target="_blank">Recepies</a></li>
         <li><a href="https://www.baking-forums.com/forums/cakes.6/" target="_blank">Forum</a></li>
+        <li><a href="https://www.bakemag.com/magazine_subscriptions" target="_blank">Subscribe</a></li>
         <li><a href="https://www.tantfondant.se/" target="_blank">Shop</a></li>
+        <li><a href="https://www.bakemag.com/contact-us" target="_blank">Contact us</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- The big news content -->
-  <section class="big-news">
-    <img src="assets/Princesscake.JPG" alt="Princess cake">
-    <h1>The Swedish"Princess cake"</h1>
-    <p>The so called Princess cake is becoming popular outside of Sweden. The cake is a
-      traditional Swedish layer cake or torte consisting of alternating layers of airy sponge cake,
-      pastry cream, and a thick-domed layer of whipped cream. The cake is covered by a layer of rolled marzipan,
-      giving it a smooth, rounded top. The marzipan overlay is usually green, sprinkled with powdered sugar, and
-      often decorated with a pink marzipan rose. While the original recipe did not contain any fruit, modern versions
-      usually include layers of jam or fresh fruit, usually raspberries.</p>
-    <a href="https://www.tastingtable.com/1371175/classic-swedish-princess-cake-prinsesstarta-recipe/"><button>Read
-        more</button></a>
-  </section>
 
-  <!-- The other news  -->
-  <section class="article">
-    <article>
-      <img src="assets/rose.jpg" alt="rose">
-      <h1>How to create a marsipan rose</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
-        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
-        posuere.<button>Read
-          more</button></a>
-      </p>
-    </article>
-    <article>
-      <img src="assets/rose.jpg" alt="rose">
-      <h1>How to create a marsipan rose</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
-        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
-        posuere.<button>Read
-          more</button></a>
-      </p>
-    </article>
-    <article>
-      <img src="assets/rose.jpg" alt="rose">
-      <h1>How to create a marsipan rose</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
-        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
-        posuere.<button>Read
-          more</button></a>
-      </p>
-    </article>
-    <article>
-      <img src="assets/rose.jpg" alt="rose">
-      <h1>How to create a marsipan rose</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
-        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
-        posuere.<button>Read
-          more</button></a>
-      </p>
-    </article>
-    <article>
-      <img src="assets/rose.jpg" alt="rose">
-      <h1>How to create a marsipan rose</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
-        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
-        posuere.<button>Read
-          more</button></a>
-      </p>
-    </article>
-    <article>
-      <img src="assets/rose.jpg" alt="rose">
-      <h1>How to create a marsipan rose</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
-        augue rhoncus lobortis. Donec consectetur ultrices cursus. Fusce consectetur leo at dignissim
-        posuere.<button>Read
-          more</button></a>
-      </p>
-    </article>
-  </section>
+  <!-- The big news content -->
+  <main>
+    <section>
+      <img src="assets/princess_cake.jpg" alt="Princess cake">
+      <div>
+        <h2>The Swedish"Princess cake"</h2>
+        <p>The so called Princess cake has become popular all over the world. The cake is a
+          traditional Swedish layer cake or torte consisting of alternating layers of airy sponge cake,
+          pastry cream, and a thick-domed layer of whipped cream. The cake is covered by a layer of rolled marzipan,
+          giving it a smooth, rounded top. </p>
+        <p>
+          The marzipan overlay is usually green, sprinkled with powdered sugar, and
+          often decorated with a pink marzipan rose. While the original recipe did not contain any fruit, modern
+          versions
+          usually include layers of jam or fresh fruit, usually raspberries.</p>
+        <a href="https://www.tastingtable.com/1371175/classic-swedish-princess-cake-prinsesstarta-recipe/"><button>Read
+            more</button></a>
+      </div>
+    </section>
+
+    <!-- The other news  -->
+    <section>
+
+      <article>
+        <a
+          href="https://liliscakes.com/basics/decorating-cakes-and-desserts/marzipan-almond-paste/making-almond-paste-marzipan-roses-and-leaves/"><img
+            src="assets/rose.jpg" alt="marsipan rose"></a>
+        <h3>How to create a marsipan rose</h3>
+        <p>Making almond paste roses and leaves is actually pretty easy.
+          As usual you just need to practise a little and suddenly one day your roses
+          are coming out all bloomin’ lovely!</p>
+      </article>
+
+      <article>
+        <a href="https://businessday.ng/bd-weekender/article/the-most-expensive-cakes-in-the-world/"><img
+            src="assets/expensive_cakes.jpg" alt="expensive cake"></a>
+        <h3>The most expensive cakes in the world</h3>
+        <p>Cakes have always been a symbol of celebration and indulgence. From birthdays to weddings, they bring joy and
+          delight to our taste buds. While most of us are accustomed to regular bakery cakes, there exists a world where
+          cakes become true works of art, crafted with the finest ingredients and adorned with opulent decorations.</p>
+      </article>
+
+      <article>
+        <a href="https://www.independent.co.uk/indy-eats/janes-patisserie-cookbook-mary-berry-b2592412.html"><img
+            src="assets/baking.jpg" alt="baking"></a>
+        <h3>The golden rules of baking</h3>
+        <p>Her first book became the fastest-selling baking book of all time, she helped judge the Queen’s Jubilee
+          Platinum Pudding alongside Mary Berry and she’s a Saturday Kitchen regular. Now, Jane Dunn is sharing her
+          secrets.
+        </p>
+      </article>
+
+      <article>
+        <img src="assets/rose.jpg" alt="rose"><a href="https://mamaguru.com/marzipan-roses"></a>
+        <h3>How to create a marsipan rose</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
+          augue rhoncus lobortis.
+        </p>
+      </article>
+    </section>
+  </main>
 </body>
+
 <footer>
   <p>&copy; 2024 Bake News</p>
 </footer>
