added last changes

--- a/code/index.html
+++ b/code/index.html
@@ -3,23 +3,22 @@
 
 <head>
   <meta charset="utf-8" />
+  <!-- the meta tag for responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-  <!-- Change the title below -->
+
+  <!-- Title -->
   <title>the Chai magazine</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
+
+
 
 <body>
   <div class="logo-and-nav-bar">
     <header>
-      <!-- Some kind of logo and navbar -->
+      <!-- Logo and navbar -->
       <h1> the Chai magazine </h1>
+      <img class="newspaper-logo" src="https://cdn-icons-png.flaticon.com/512/135/135535.png" alt="tea logo">
       <nav class="nav">
         <ul>
           <li><a href="https://www.vogue.com/fashion">Fashion</a></li>
@@ -31,12 +30,7 @@
           <li><a href="https://www.vogue.com/photovogue">Entertainment</a></li>
         </ul>
       </nav>
-      <!-- <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span> -->
-  </div>
-  </header>
+    </header>
   </div>
 
   <section class="News">
@@ -58,8 +52,7 @@
         2028, the Olympics will return to Los Angeles for the first time since 1984, and there’s already a lot to live
         up to.</p>
       <img class="main-news-image" src="https://la28.org/content/dam/latwentyeight/LA28VenuePlanMainPage.jpg"
-        alt="Olympics">
-
+        alt="LA Olympic venues">
     </div>
 
     <div class="main-news-3">
