--- a/index.html
+++ b/index.html
@@ -4,72 +4,93 @@
 <head>
   <meta charset="utf-8" />
   <!-- Change the title below -->
-  <title>News Site</title>
+  <title>Au revoir travel news</title>
   <link rel="stylesheet" href="./style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   <header>
-    <!-- Some kind of logo and navbar -->
+    <header class="header">
+      <div class="title">
+        Au revoir
+      </div>
+      <nav class="nav">
+        <ul>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Travel</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="hamburger">
+        ☰
+      </div>
+    </header>
+    </div>
   </header>
-  <main>
-    <div class="card big-card">
-      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
-      <div class="text-content-big">
-        <h3>Rubrik</h3>
-        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
-        <ul>
-          <li>Read more</li>
-        </ul>
-      </div>
-    </div>
+</body>
 
-    <div class="card">
-      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
-      <div class="text-content">
-        <h3>Rubrik</h3>
-        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
-        <ul>
-          <li>Read more</li>
-        </ul>
-      </div>
-    </div>
 
-    <div class="card">
-      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
-      <div class="text-content">
-        <h3>Rubrik</h3>
-        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
-        <ul>
-          <li>Read more</li>
-        </ul>
-      </div>
+<div class="big-card">
+  <img class="card-image big" src="img/airballon.png" alt=" denna senare">
+  <div class="text-content big">
+    <h3 class="article-h3">Hot Air Ballooning</h3>
+    <p>
+      Hot air ballooning offers a unique way to experience the landscape from above. Floating silently over fields,
+      forests, or cities, it provides breathtaking views and a sense of serenity. The gentle ascent and panoramic vistas
+      make it a popular activity for both thrill-seekers and those looking for a peaceful escape. </p>
+    <ul>
+      <li>Read more</li>
+    </ul>
+  </div>
+</div>
+<main>
+  <div class="card">
+    <img class="card-image" src="img/alps.png" alt="ändra denna senare">
+    <div class="text-content">
+      <h3>Alpine Hiking Trails</h3>
+      <p>Explore new hiking paths.</p>
+      <ul>
+        <li>Read more</li>
+      </ul>
     </div>
+  </div>
 
-    <div class="card">
-      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
-      <div class="text-content">
-        <h3>Rubrik</h3>
-        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
-        <ul>
-          <li>Read more</li>
-        </ul>
-      </div>
+  <div class="card">
+    <img class="card-image" src="img/kopenhamn.png" alt="ändra denna senare">
+    <div class="text-content">
+      <h3>Floating Gardens</h3>
+      <p>New green spaces on city canals.</p>
+      <ul>
+        <li>Read more</li>
+      </ul>
     </div>
+  </div>
 
-    <div class="card">
-      <img class="card-image" src="img/newyork.png" alt="ändra denna senare">
-      <div class="text-content">
-        <h3>Rubrik</h3>
-        <p>Här kommer det vara massor med text. Här kommer det vara massor med text</p>
-        <ul>
-          <li>Read more</li>
-        </ul>
-      </div>
+  <div class="card">
+    <img class="card-image" src="img/ski-trip.png" alt="ändra denna senare">
+    <div class="text-content">
+      <h3>Chamonix Ski Season</h3>
+      <p>Fresh snow and perfect conditions.</p>
+      <ul>
+        <li>Read more</li>
+      </ul>
     </div>
+  </div>
 
-  </main>
+  <div class="card">
+    <img class="card-image" src="img/rome.png" alt="ändra denna senare">
+    <div class="text-content">
+      <h3>Rome's Architectural</h3>
+      <p>A mix of ancient and modern design.</p>
+      <ul>
+        <li>Read more</li>
+      </ul>
+    </div>
+  </div>
+
+</main>
 </body>
 
 </html>
