--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- Change the title below -->
   <title>Au revoir travel news</title>
   <link rel="stylesheet" href="./style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,10 +16,10 @@
       </div>
       <nav class="nav">
         <ul>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Travel</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="http://google.com/">News</a></li>
+          <li><a href="http://google.com/">Travel</a></li>
+          <li><a href="http://google.com/">About</a></li>
+          <li><a href="http://google.com/">Contact</a></li>
         </ul>
       </nav>
       <div class="hamburger">
@@ -33,7 +32,7 @@
 
 
 <div class="big-card">
-  <img class="card-image big" src="img/airballon.png" alt=" denna senare">
+  <img class="card-image big" src="img/airballon.png" alt="airballon">
   <div class="text-content big">
     <h3 class="article-h3">Hot Air Ballooning</h3>
     <p>
@@ -41,51 +40,51 @@
       forests, or cities, it provides breathtaking views and a sense of serenity. The gentle ascent and panoramic vistas
       make it a popular activity for both thrill-seekers and those looking for a peaceful escape. </p>
     <ul>
-      <li>Read more</li>
+      <li><a href="http://google.com/" class="button">Read more</a></li>
     </ul>
   </div>
 </div>
 <main>
   <div class="card">
-    <img class="card-image" src="img/alps.png" alt="ändra denna senare">
+    <img class="card-image" src="img/alps.png" alt="alps">
     <div class="text-content">
       <h3>Alpine Hiking Trails</h3>
       <p>Explore new hiking paths.</p>
       <ul>
-        <li>Read more</li>
+        <li><a href="http://google.com/" class="button">Read more</a></li>
       </ul>
     </div>
   </div>
 
   <div class="card">
-    <img class="card-image" src="img/kopenhamn.png" alt="ändra denna senare">
+    <img class="card-image" src="img/kopenhamn.png" alt="Kopenhamn">
     <div class="text-content">
       <h3>Floating Gardens</h3>
       <p>New green spaces on city canals.</p>
       <ul>
-        <li>Read more</li>
+        <li><a href="http://google.com/" class="button">Read more</a></li>
       </ul>
     </div>
   </div>
 
   <div class="card">
-    <img class="card-image" src="img/ski-trip.png" alt="ändra denna senare">
+    <img class="card-image" src="img/ski-trip.png" alt="skitrip">
     <div class="text-content">
       <h3>Chamonix Ski Season</h3>
       <p>Fresh snow and perfect conditions.</p>
       <ul>
-        <li>Read more</li>
+        <li><a href="http://google.com/" class="button">Read more</a></li>
       </ul>
     </div>
   </div>
 
   <div class="card">
-    <img class="card-image" src="img/rome.png" alt="ändra denna senare">
+    <img class="card-image" src="img/rome.png" alt="rome">
     <div class="text-content">
       <h3>Rome's Architectural</h3>
       <p>A mix of ancient and modern design.</p>
       <ul>
-        <li>Read more</li>
+        <li><a href="http://google.com/" class="button">Read more</a></li>
       </ul>
     </div>
   </div>
