added a logo, did some hover styling and added a footer

--- a/code/index.html
+++ b/code/index.html
@@ -8,9 +8,13 @@
   </head>
   <body>
     <header>
-  <div class="main-header">
-        <img src="./assets/IMG_patrol.jpg" alt="picture of rain and mountains" class="head-img">
-  </div>
+    <div class="brand-logo">
+      <img class="brand-logo-image" src="./assets/IMG_logo.jpg" alt="brand-logo-image"> 
+      <h4>Women Who Sent It</h4>
+    </div>
+    <div class="main-header">
+      <img src="./assets/IMG_patrol.jpg" alt="picture of three female ski patrol doing avalanche control">   
+    </div>
       <div class="nav-bar">
         <div class="hamburger">
           <div class="hamburger-layer"></div>
@@ -34,46 +38,40 @@
   </div>
       
 <section class="latest-news-container">
-  <div class="latest-news-card card-one">
-        <img class="card-image" src="./assets/IMG_female.guides.jpg" alt="picture of a mountain" />
+  <a href="#" class="latest-news-card">
+        <img class="card-image" src="./assets/IMG_female.guides.jpg" alt="picture of two female guides on a mountain" />
         <div class="latest-news-card-content">
-          <h2>Janja garnbret olympic gold</h2>
+          <h2>"Female Mountain Leaders Break Barriers in Outdoor Leadership"</h2>
+          <p>Female mountain leaders are redefining outdoor leadership, inspiring more women to pursue careers in mountaineering and adventure sports.</p>
+        </div>
+      </a>
+  <a href="#" class="latest-news-card">
+        <img class="card-image" src="./assets/IMG_ostsidan.jpg" alt="picture of two men on a chossy mountain" />
+        <div class="latest-news-card-content">
+          <h2>"First Ascent Achieved by Trio in Kebnekaise Range"</h2>
           <p>
-            There's a simpler method to peel a banana that might surprise you —
-            are you doing it correctly?
+            Two men and one woman successfully completed a pioneering first ascent in Sweden's Kebnekaise mountain range.
           </p>
         </div>
-      </div>
-  <div class="latest-news-card card-two">
-        <img class="card-image" src="./assets/IMG_ostsidan.jpg" alt="picture of a mountain" />
+      </a>
+  <a href="#" class="latest-news-card">
+        <img class="card-image" src="./assets/IMG_keb.viaf.jpg" alt="picture of cllient being guided on a mountain" />
         <div class="latest-news-card-content">
-          <h2>Janja garnbret olympic gold</h2>
+          <h2>"Melting Permafrost Increases Rockfall Risks in Mountainous Regions"</h2>
           <p>
-            There's a simpler method to peel a banana that might surprise you —
-            are you doing it correctly?
+            Melting permafrost is destabilizing mountain rock formations, leading to more frequent and dangerous rockfalls.
           </p>
         </div>
-      </div>
-  <div class="latest-news-card card-three">
-        <img class="card-image" src="./assets/IMG_keb.viaf.jpg" alt="picture of a mountain" />
+      </a>
+  <a href="#" class="latest-news-card">
+        <img class="card-image" src="./assets/IMG_nuolja.jpg" alt="picture taken from a ski life of skiis and the foggy view" />
         <div class="latest-news-card-content">
-          <h2>Janja garnbret olympic gold</h2>
+          <h2>"Top Spots for Off-Piste Skiing above the Arctic Circle"</h2>
           <p>
-            There's a simpler method to peel a banana that might surprise you —
-            are you doing it correctly?
+            Discover the best off-piste skiing locations in Northern Sweden this season, featuring untouched powder and challenging terrain.
           </p>
         </div>
-      </div>
-  <div class="latest-news-card">
-        <img class="card-image" src="./assets/IMG_nuolja.jpg" alt="picture of a mountain" />
-        <div class="latest-news-card-content">
-          <h2>Janja garnbret olympic gold</h2>
-          <p>
-            There's a simpler method to peel a banana that might surprise you —
-            are you doing it correctly?
-          </p>
-        </div>
-      </div>
+      </a>
 
 </section>
 
@@ -82,38 +80,40 @@
   </div>
       
 <section class="articles-container">
-  <div class="article-card">
+  <a href="#" class="article-card">
     <img class="articles-card-image" src="./assets/IMG_skoter.jpg" alt="picture of rain and mountains">
     <div class="articles-card-content">
-      <h2>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h2>
+      <h2>"Breaking the Ice: Why More Women Are Needed in Avalanche Professions"</h2>
       <p> COUNTRY 2024-07-19</p>
     </div>
-  </div>
-  <div class="article-card">
+  </a>
+  <a href="#" class="article-card">
     <img class="articles-card-image" src="./assets/IMG_falljokull.jpg" alt="picture of rain and mountains">
     <div class="articles-card-content">
-      <h2>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h2>
+      <h2>"Iceland’s Vatnajökull Ice Cap, largest in Europe: An Icon in Peril"</h2>
       <p> COUNTRY 2024-07-19</p>
     </div>
-  </div>
-  <div class="article-card">
+  </a>
+  <a href="#" class="article-card">
     <img class="articles-card-image" src="./assets/IMG_happy.group.jpg" alt="picture of rain and mountains">
     <div class="articles-card-content">
-      <h2>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h2>
+      <h2>"Glacier Guides Share Tips for the Ultimate Ice Adventure"</h2>
       <p> COUNTRY 2024-07-19</p>
     </div>
-  </div>
-  <div class="article-card">
-    <img class="articles-card-image" src="./assets/IMG_falljokull.jpg" alt="picture of rain and mountains">
+  </a>
+  <a href="#" class="article-card">
+    <img class="articles-card-image" src="./assets/IMG_kilpis.jpg" alt="picture of people on a winter hike">
     <div class="articles-card-content">
-      <h2>what you need to know to get around on the largest glacier in Europe. *hint hint* it's in Iceland</h2>
-      <p> COUNTRY 2024-07-19</p>
+      <h2>"What You Need to Know to Survive -25°C Wilderness Conditions for 10 days"</h2>
+      <p> COUNTRY 2024-09-01</p>
     </div>
-  </div>
+  </a>
 
 </section>
 <footer>
-  fjdksghkfjdshgjk
+  <div class="copyright">
+    <span>Created by Gabriella Iofe 🦥 </span>
+  </div>
 </footer>
 </body>
 </html>
