added pictures to the last article and updated a href links

--- a/code/index.html
+++ b/code/index.html
@@ -89,10 +89,12 @@
       </article>
 
       <article>
-        <img src="assets/rose.jpg" alt="rose"><a href="https://mamaguru.com/marzipan-roses"></a>
-        <h3>How to create a marsipan rose</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mauris est, vitae finibus
-          augue rhoncus lobortis.
+        <a href="https://www.bakemag.com/articles/19296-robotic-decorating-addresses-bakery-needs"><img
+            src="assets/robot.jpg" alt="robot"></a>
+        <h3>Robotic decorating</h3>
+        <p>Decorating cakes, cupcakes, cookies, and pies are labor-intensive tasks that require skilled and experienced
+          bakery workers. With the drastic reduction of skilled decorators retiring or not entering the industry,
+          robotic decorating offers the perfect answer for bakeries looking to stay competitive.
         </p>
       </article>
     </section>
