updated some text

--- a/code/index.html
+++ b/code/index.html
@@ -41,7 +41,7 @@
     <section>
       <img src="assets/princess_cake.jpg" alt="Princess cake">
       <div>
-        <h2>The Swedish"Princess cake"</h2>
+        <h2>The Princess cake</h2>
         <p>The so called Princess cake has become popular all over the world. The cake is a
           traditional Swedish layer cake or torte consisting of alternating layers of airy sponge cake,
           pastry cream, and a thick-domed layer of whipped cream. The cake is covered by a layer of rolled marzipan,
