--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
   <div class ="header-content">
     <header>
       <div class="logo">
-          <img src="./assets/logo-universe.svg" alt="Logo">
+          <img src="./assets/logo-universe.png" alt="Logo">
       </div>
       <div class="mobile-menu-icon">
         <img src="./assets/hamburger-icon.png" alt="Menu">
