--- a/code/index.html
+++ b/code/index.html
@@ -2,22 +2,80 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Best Indian restaurants in Stockholm</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <h1>
+      Best Indian restaurants in Stockholm
+    </h1>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <nav class="navbar">
+      <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="SaravanaBhavan.html">Saravana Bhavan</a></li>
+          <li><a href="SouthIndian.html">South Indian</a></li>
+          <li><a href="ChiliMasala.html">Chili Masala</a></li>
+          <li><a href="IndianStreetFood.html">Indian Street Food</a></li>
+      </ul>
+  </nav>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+
+<div class="grid-container">
+  <div class="item1"> <h2>Indian cuisine</h2> <p>Indian cuisine consists of a variety of regional and traditional cuisines native to the
+    Indian subcontinent. Given the diversity in soil, climate, culture, ethnic groups, and 
+    occupations, these cuisines vary substantially and use locally available spices, herbs,
+    vegetables, and fruits. 
+   
+    Indian food is also heavily influenced by religion, in particular Hinduism and Islam, 
+    cultural choices and traditions.
+   </p></div>
+  <div class="item2"><img src="assets/Indian-food-dosa.jpg" style="width: 100%;"><h2>Dosa</h2><p>Dosa is a traditional dish from south India.</p></div>
+  <div class="item3"><img src="assets/Indian-food-paneer-tikka.jpg" style="width: 50%;"><h2>Paneer tikka masala</h2><p>Paneer tikka masala is a traditional Indian dish.</p></div>  
+  <div class="item4"><img src="assets/Golgappa-india-food.jpg" style="width: 50%;"><h2>Golgappa</h2><p>Golgappa (aka Pani Puri) is very popular street food in India.</p></div>
+  <div class="item5"><h2>Idli</h2><p>Idli is a traditional Indian rice cake.</p></div>
+</div>
+
+
+<div class="row"> 
+  <div class="column">
+    <img src="assets/20220323_190719.jpg" style="width:100%">
+    <img src="assets/20220402_122854.jpg" style="width:100%">
+    <img src="assets/20240707_105107.jpg" style="width:100%">
+    <img src="assets/20240708_143140.jpg" style="width:100%">
+    <img src="assets/20240716_121644.jpg" style="width:100%">
+    <img src="assets/IMG_20220408_213650_292.jpg" style="width:100%">
+    <img src="assets/IMG_20240725_214649_375.jpg" style="width:100%">
+  </div>
+  
+  <div class="column">
+    <img src="assets/20240716_121644.jpg" style="width:100%">
+    <img src="assets/IMG_20220408_213650_292.jpg" style="width:100%">
+    <img src="assets/IMG_20240725_214649_375.jpg" style="width:100%">
+    <img src="assets/20220323_190719.jpg" style="width:100%">
+    <img src="assets/20220402_122854.jpg" style="width:100%">
+    <img src="assets/20240707_105107.jpg" style="width:100%">
+  </div> 
+   
+  <div class="column">
+    <img src="assets/20220323_190719.jpg" style="width:100%">
+    <img src="assets/20220402_122854.jpg" style="width:100%">
+    <img src="assets/20240707_105107.jpg" style="width:100%">
+    <img src="assets/20240708_143140.jpg" style="width:100%">
+    <img src="assets/20240716_121644.jpg" style="width:100%">
+    <img src="assets/IMG_20220408_213650_292.jpg" style="width:100%">
+    <img src="assets/IMG_20240725_214649_375.jpg" style="width:100%">
+  </div>
+  
+  <div class="column">
+    <img src="assets/20240716_121644.jpg" style="width:100%">
+    <img src="assets/IMG_20220408_213650_292.jpg" style="width:100%">
+    <img src="assets/IMG_20240725_214649_375.jpg" style="width:100%">
+    <img src="assets/20220323_190719.jpg" style="width:100%">
+    <img src="assets/20220402_122854.jpg" style="width:100%">
+    <img src="assets/20240707_105107.jpg" style="width:100%">
+  </div>
+</div>
   </body>
 </html>
