--- a/code/index.html
+++ b/code/index.html
@@ -171,11 +171,11 @@
   <section class="footer-section">
     <div class="footer-content">
       <h2>GET THE LATEST DAILY NEWSLETTER</h2>
-      <p>Sign up here to get the latest newsletter</p>
       <a href="https://www.google.com/">
         <button>Subscribe</button>
       </a>
-      
+      <br>
+      <p> Website by Jenny Andersén ©</p>
     </div>
   </section>
 </footer>
