--- a/code/index.html
+++ b/code/index.html
@@ -42,7 +42,7 @@
       </header>
 
       <section class="hero grid-container--large">
-        <div class="hero__content">
+        <article class="hero__content">
           <div class="article-meta">
             <a href="#category" class="article-meta__category">Behavior</a>
             <span class="divider-bullet">∙</span>
@@ -57,7 +57,7 @@
           <a class="button" href="#read-more"
             ><span><span>Read full story</span></span></a
           >
-        </div>
+        </article>
         <div class="hero__image">
           <img
             class="object-fit-cover"
@@ -70,15 +70,15 @@
       <section class="articles grid-container">
         <h2>Hot off the nest</h2>
         <div class="grid-wrapper">
-          <div class="card-item">
-            <div class="card-item__image">
+          <article class="article">
+            <div class="article__image">
               <img
                 class="border-radius-lg"
                 src="./assets/puffins.jpg"
                 alt="Two puffins on green grass"
               />
             </div>
-            <div class="card-item__content">
+            <div class="article__content">
               <div class="article-meta text-small">
                 <a href="#category" class="article-meta__category">Behavior</a>
                 <span class="divider-bullet">∙</span>
@@ -87,7 +87,7 @@
               <h3>
                 The secret life of Puffins: New discoveries in coastal habitats
               </h3>
-              <p class="card-item__description text-small">
+              <p class="article__description text-small">
                 Puffins, with their colorful beaks and charming appearance, are
                 more than just iconic seabirds. Recent studies along coastal
                 cliffs are revealing surprising behaviors...
@@ -96,16 +96,16 @@
                 >
               </p>
             </div>
-          </div>
-          <div class="card-item">
-            <div class="card-item__image">
+          </article>
+          <article class="article">
+            <div class="article__image">
               <img
                 class="border-radius-lg"
                 src="./assets/eagle.jpg"
                 alt="The head of an eagle"
               />
             </div>
-            <div class="card-item__content">
+            <div class="article__content">
               <div class="article-meta text-small">
                 <a href="#category" class="article-meta__category"
                   >North America</a
@@ -117,7 +117,7 @@
                 Eagles on the rise: The comeback of North America's majestic
                 predators
               </h3>
-              <p class="card-item__description text-small">
+              <p class="article__description text-small">
                 Once endangered, eagle populations in North America are making a
                 remarkable recovery. Conservation efforts have played a critical
                 role, and recent surveys show...
@@ -126,23 +126,23 @@
                 >
               </p>
             </div>
-          </div>
-          <div class="card-item card-item--large border-radius-lg">
-            <div class="card-item__image">
+          </article>
+          <article class="article article--large border-radius-lg">
+            <div class="article__image">
               <img
                 class="object-fit-cover"
                 src="./assets/flamingo.jpg"
                 alt="Songbird sitting on a branch"
               />
             </div>
-            <div class="card-item__content">
+            <div class="article__content">
               <div class="article-meta text-small">
                 <a href="#category" class="article-meta__category">Behavior</a>
                 <span class="divider-bullet">∙</span>
                 <p class="inline">4 min read</p>
               </div>
               <h3>Understanding flamingo social behavior</h3>
-              <p class="card-item__description">
+              <p class="article__description">
                 Flamingos are renowned for their vibrant pink plumage and group
                 dynamics. Recent research has provided new insights into how
                 these birds form and maintain their large flocks, shedding light
@@ -153,16 +153,16 @@
                 >
               </p>
             </div>
-          </div>
-          <div class="card-item">
-            <div class="card-item__image">
+          </article>
+          <article class="article">
+            <div class="article__image">
               <img
                 class="border-radius-lg"
                 src="./assets/penguin.jpg"
                 alt="Two penguins facing each other"
               />
             </div>
-            <div class="card-item__content">
+            <div class="article__content">
               <div class="article-meta text-small">
                 <a href="#category" class="article-meta__category"
                   >Climate change</a
@@ -174,7 +174,7 @@
                 Penguin populations in peril: Climate change threatens
                 Antarctica’s iconic birds
               </h3>
-              <p class="card-item__description text-small">
+              <p class="article__description text-small">
                 Penguins are facing growing threats as climate change alters
                 their Antarctic habitats. Melting ice and shifting food sources
                 are impacting their populations in ways...
@@ -183,16 +183,16 @@
                 >
               </p>
             </div>
-          </div>
-          <div class="card-item">
-            <div class="card-item__image">
+          </article>
+          <article class="article">
+            <div class="article__image">
               <img
                 class="border-radius-lg"
                 src="./assets/warbler.jpg"
                 alt="Warbler sitting on a branch"
               />
             </div>
-            <div class="card-item__content">
+            <div class="article__content">
               <div class="article-meta text-small">
                 <a href="#category" class="article-meta__category"
                   >Communication</a
@@ -204,7 +204,7 @@
                 The secret songs of warblers: Decoding their complex
                 communication
               </h3>
-              <p class="card-item__description text-small">
+              <p class="article__description text-small">
                 Warblers, with their intricate songs, are not just beautiful to
                 listen to—they’re also communicating in ways we’re only
                 beginning to understand. New studies are revealing...
@@ -213,16 +213,16 @@
                 >
               </p>
             </div>
-          </div>
-          <div class="card-item">
-            <div class="card-item__image">
+          </article>
+          <article class="article">
+            <div class="article__image">
               <img
                 class="border-radius-lg"
                 src="./assets/owl.jpg"
                 alt="The head of an owl"
               />
             </div>
-            <div class="card-item__content">
+            <div class="article__content">
               <div class="article-meta text-small">
                 <a href="#category" class="article-meta__category">Movement</a>
                 <span class="divider-bullet">∙</span>
@@ -231,7 +231,7 @@
               <h3>
                 Owls in the dark: How these nocturnal hunters navigate the night
               </h3>
-              <p class="card-item__description text-small">
+              <p class="article__description text-small">
                 Owls are masters of the night, with their silent flight and keen
                 senses. Scientists are uncovering new details about how these
                 nocturnal predators hunt in complete...
@@ -240,16 +240,16 @@
                 >
               </p>
             </div>
-          </div>
-          <div class="card-item">
-            <div class="card-item__image">
+          </article>
+          <article class="article">
+            <div class="article__image">
               <img
                 class="border-radius-lg"
                 src="./assets/songbird.jpg"
                 alt="Songbird sitting on a branch"
               />
             </div>
-            <div class="card-item__content">
+            <div class="article__content">
               <div class="article-meta text-small">
                 <a href="#category" class="article-meta__category"
                   >Communication</a
@@ -260,7 +260,7 @@
               <h3>
                 Songbird serenade: The impact of urbanization on their melodies
               </h3>
-              <p class="card-item__description text-small">
+              <p class="article__description text-small">
                 Songbirds bring life to our mornings with their melodies, but
                 urbanization is changing the way they sing. New research is
                 exploring how city life is affecting their songs...
@@ -269,7 +269,7 @@
                 >
               </p>
             </div>
-          </div>
+          </article>
         </div>
       </section>
     </div>
