--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
     <link rel=”mask-icon” href=”./assets/favicon.svg” color=”#000000">
   </head>
   <body>
-    <div class="grid-wrapper grid-wrapper--main">
+    <main class="grid-wrapper grid-wrapper--main">
       <header class="top-header grid-container">
         <img
           class="top-header__logo"
@@ -24,11 +24,11 @@
         />
         <nav class="top-header__nav">
           <ul>
-            <li><a href="https://google.se">Top stories</a></li>
-            <li><a href="https://google.se">About us</a></li>
-            <li><a href="https://google.se">Contact</a></li>
+            <li><a href="#top-stories">Top stories</a></li>
+            <li><a href="#about-us">About us</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li>
-              <a class="button" href="https://google.se"
+              <a class="button" href="#subscribe"
                 ><span><span>Subscribe</span></span></a
               >
             </li>
@@ -272,7 +272,8 @@
           </article>
         </div>
       </section>
-    </div>
+    </main>
+
     <footer class="grid-wrapper">
       <div class="footer__outer grid-container grid-container--large">
         <div class="grid-wrapper">
