--- a/code/index.html
+++ b/code/index.html
@@ -39,7 +39,7 @@
   <!-- The big news content -->
   <main>
     <section>
-      <img src="assets/princess_cake.jpg" alt="Princess cake">
+      <img src="assets/princess_cake-removebg.png" alt="Princess cake">
       <div>
         <h2>The Princess cake</h2>
         <p>The so called Princess cake has become popular all over the world. The cake is a
@@ -73,9 +73,7 @@
         <a href="https://businessday.ng/bd-weekender/article/the-most-expensive-cakes-in-the-world/"><img
             src="assets/expensive_cakes.jpg" alt="expensive cake"></a>
         <h3>The most expensive cakes in the world</h3>
-        <p>Cakes have always been a symbol of celebration and indulgence. From birthdays to weddings, they bring joy and
-          delight to our taste buds. While most of us are accustomed to regular bakery cakes, there exists a world where
-          cakes become true works of art, crafted with the finest ingredients and adorned with opulent decorations.</p>
+        <p> While most of us are accustomed to regular bakery cakes, there exists a world where cakes become true works of art, crafted with the finest ingredients and adorned with opulent decorations.</p>
       </article>
 
       <article>
@@ -92,9 +90,7 @@
         <a href="https://www.bakemag.com/articles/19296-robotic-decorating-addresses-bakery-needs"><img
             src="assets/robot.jpg" alt="robot"></a>
         <h3>Robotic decorating</h3>
-        <p>Decorating cakes, cupcakes, cookies, and pies are labor-intensive tasks that require skilled and experienced
-          bakery workers. With the drastic reduction of skilled decorators retiring or not entering the industry,
-          robotic decorating offers the perfect answer for bakeries looking to stay competitive.
+        <p>Decorating cakes, cupcakes, cookies, and pies are labor-intensive tasks. With the drastic reduction of skilled decorators retiring or not entering the industry, robotic decorating offers the perfect answer for bakeries looking to stay competitive.
         </p>
       </article>
     </section>
