--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -95,10 +95,8 @@
       </article>
     </section>
   </main>
+  <footer>
+    <p>&copy; 2024 The Sweet Scoop</p>
+  </footer>
 </body>
-
-<footer>
-  <p>&copy; 2024 The Sweet Scoop</p>
-</footer>
-
 </html>
