changed elements for accessibility purpose and changed color font to increase contrast ratio

--- a/code/index.html
+++ b/code/index.html
@@ -51,8 +51,8 @@
           often decorated with a pink marzipan rose. While the original recipe did not contain any fruit, modern
           versions
           usually include layers of jam or fresh fruit, usually raspberries.</p>
-        <a href="https://www.tastingtable.com/1371175/classic-swedish-princess-cake-prinsesstarta-recipe/"><button>Read
-            more</button></a>
+        <a href="https://www.tastingtable.com/1371175/classic-swedish-princess-cake-prinsesstarta-recipe">
+        <button>Read more <span class="visually-hidden">about the Princess cake</span></button></a>
       </div>
     </section>
 
