Adding tabindex to all my headlines and paragraphs.

--- a/index.html
+++ b/index.html
@@ -9,87 +9,84 @@
 </head>
 
 <body>
-  <header>
-    <header class="header">
-      <div class="title">
-        Au revoir
-      </div>
-      <nav class="nav">
-        <ul>
-          <li><a href="http://google.com/">News</a></li>
-          <li><a href="http://google.com/">Travel</a></li>
-          <li><a href="http://google.com/">About</a></li>
-          <li><a href="http://google.com/">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="hamburger">
-        ☰
-      </div>
-    </header>
+  <header class="header">
+    <div class="title">
+      Au revoir
+    </div>
+    <nav class="nav">
+      <ul>
+        <li><a href="http://google.com/">News</a></li>
+        <li><a href="http://google.com/">Travel</a></li>
+        <li><a href="http://google.com/">About</a></li>
+        <li><a href="http://google.com/">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="hamburger">
+      ☰
     </div>
   </header>
-</body>
 
-
-<div class="big-card">
-  <img class="card-image big" src="img/airballon.png" alt="airballon">
-  <div class="text-content big">
-    <h3 class="article-h3">Hot Air Ballooning</h3>
-    <p>
-      Hot air ballooning offers a unique way to experience the landscape from above. Floating silently over fields,
-      forests, or cities, it provides breathtaking views and a sense of serenity. The gentle ascent and panoramic vistas
-      make it a popular activity for both thrill-seekers and those looking for a peaceful escape. </p>
-    <ul>
-      <li><a href="http://google.com/" class="button">Read more</a></li>
-    </ul>
-  </div>
-</div>
-<main>
-  <div class="card">
-    <img class="card-image" src="img/alps.png" alt="alps">
-    <div class="text-content">
-      <h3>Alpine Hiking Trails</h3>
-      <p>Explore new hiking paths.</p>
+  <div class="big-card">
+    <img class="card-image big" src="img/airballon.png" alt="airballon">
+    <div class="text-content big">
+      <h3 class="article-h3" tabindex="0">Hot Air Ballooning</h3>
+      <p tabindex="0">
+        Hot air ballooning offers a unique way to experience the landscape from above. Floating silently over fields,
+        forests, or cities, it provides breathtaking views and a sense of serenity. The gentle ascent and panoramic
+        vistas
+        make it a popular activity for both thrill-seekers and those looking for a peaceful escape.
+      </p>
       <ul>
         <li><a href="http://google.com/" class="button">Read more</a></li>
       </ul>
     </div>
   </div>
 
-  <div class="card">
-    <img class="card-image" src="img/kopenhamn.png" alt="Kopenhamn">
-    <div class="text-content">
-      <h3>Floating Gardens</h3>
-      <p>New green spaces on city canals.</p>
-      <ul>
-        <li><a href="http://google.com/" class="button">Read more</a></li>
-      </ul>
+  <main>
+    <div class="card">
+      <img class="card-image" src="img/alps.png" alt="alps">
+      <div class="text-content">
+        <h3 tabindex="0">Alpine Hiking Trails</h3>
+        <p tabindex="0">Explore new hiking paths.</p>
+        <ul>
+          <li><a href="http://google.com/" class="button">Read more</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img class="card-image" src="img/ski-trip.png" alt="skitrip">
-    <div class="text-content">
-      <h3>Chamonix Ski Season</h3>
-      <p>Fresh snow and perfect conditions.</p>
-      <ul>
-        <li><a href="http://google.com/" class="button">Read more</a></li>
-      </ul>
+    <div class="card">
+      <img class="card-image" src="img/kopenhamn.png" alt="Kopenhamn">
+      <div class="text-content">
+        <h3 tabindex="0">Floating Gardens</h3>
+        <p tabindex="0">New green spaces on city canals.</p>
+        <ul>
+          <li><a href="http://google.com/" class="button">Read more</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img class="card-image" src="img/rome.png" alt="rome">
-    <div class="text-content">
-      <h3>Rome's Architectural</h3>
-      <p>A mix of ancient and modern design.</p>
-      <ul>
-        <li><a href="http://google.com/" class="button">Read more</a></li>
-      </ul>
+    <div class="card">
+      <img class="card-image" src="img/ski-trip.png" alt="skitrip">
+      <div class="text-content">
+        <h3 tabindex="0">Chamonix Ski Season</h3>
+        <p tabindex="0">Fresh snow and perfect conditions.</p>
+        <ul>
+          <li><a href="http://google.com/" class="button">Read more</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
 
-</main>
+    <div class="card">
+      <img class="card-image" src="img/rome.png" alt="rome">
+      <div class="text-content">
+        <h3 tabindex="0">Rome's Architectural</h3>
+        <p tabindex="0">A mix of ancient and modern design.</p>
+        <ul>
+          <li><a href="http://google.com/" class="button">Read more</a></li>
+        </ul>
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
