Adding aria-label to my buttons.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     </div>
     <nav class="nav">
       <ul>
-        <li><a href="http://google.com/">News</a></li>
-        <li><a href="http://google.com/">Travel</a></li>
-        <li><a href="http://google.com/">About</a></li>
-        <li><a href="http://google.com/">Contact</a></li>
+        <li><a href="http://google.com/" aria-label="Latest news section">News</a></li>
+        <li><a href="http://google.com/" aria-label="Travel section with destination guides">Travel</a></li>
+        <li><a href="http://google.com/" aria-label="About our company">About</a></li>
+        <li><a href="http://google.com/" aria-label="Contact us page">Contact</a></li>
+
       </ul>
     </nav>
     <div class="hamburger">
@@ -37,7 +38,8 @@
         make it a popular activity for both thrill-seekers and those looking for a peaceful escape.
       </p>
       <ul>
-        <li><a href="http://google.com/" class="button">Read more</a></li>
+        <li><a href="http://google.com/" class="button" aria-label="Read more about Hot Air Ballooning">Read more</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -49,7 +51,8 @@
         <h3 tabindex="0">Alpine Hiking Trails</h3>
         <p tabindex="0">Explore new hiking paths.</p>
         <ul>
-          <li><a href="http://google.com/" class="button">Read more</a></li>
+          <li><a href="http://google.com/" class="button" aria-label="Read more about Alpine Hiking Trails">Read
+              more</a></li>
         </ul>
       </div>
     </div>
@@ -60,7 +63,8 @@
         <h3 tabindex="0">Floating Gardens</h3>
         <p tabindex="0">New green spaces on city canals.</p>
         <ul>
-          <li><a href="http://google.com/" class="button">Read more</a></li>
+          <li><a href="http://google.com/" class="button" aria-label="Read more about Alpine Hiking Trails">Read
+              more</a></li>
         </ul>
       </div>
     </div>
@@ -71,7 +75,8 @@
         <h3 tabindex="0">Chamonix Ski Season</h3>
         <p tabindex="0">Fresh snow and perfect conditions.</p>
         <ul>
-          <li><a href="http://google.com/" class="button">Read more</a></li>
+          <li><a href="http://google.com/" class="button" aria-label="Read more about Chamonix Ski Season">Read more</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -82,7 +87,8 @@
         <h3 tabindex="0">Rome's Architectural</h3>
         <p tabindex="0">A mix of ancient and modern design.</p>
         <ul>
-          <li><a href="http://google.com/" class="button">Read more</a></li>
+          <li><a href="http://google.com/" class="button" aria-label="Read more about Rome's Architectural">Read
+              more</a></li>
         </ul>
       </div>
     </div>
