Removing all tabindex from my headlines and paragraphs since its not best practice.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <li><a href="http://google.com/" aria-label="Travel section with destination guides">Travel</a></li>
         <li><a href="http://google.com/" aria-label="About our company">About</a></li>
         <li><a href="http://google.com/" aria-label="Contact us page">Contact</a></li>
-
       </ul>
     </nav>
     <div class="hamburger">
@@ -28,14 +27,13 @@
   </header>
 
   <div class="big-card">
-    <img class="card-image big" src="img/airballon.png" alt="airballon">
+    <img class="card-image big" src="img/airballon.png" alt="A hot air balloon floating over a scenic landscape">
     <div class="text-content big">
-      <h3 class="article-h3" tabindex="0">Hot Air Ballooning</h3>
-      <p tabindex="0">
+      <h3 class="article-h3">Hot Air Ballooning</h3>
+      <p>
         Hot air ballooning offers a unique way to experience the landscape from above. Floating silently over fields,
         forests, or cities, it provides breathtaking views and a sense of serenity. The gentle ascent and panoramic
-        vistas
-        make it a popular activity for both thrill-seekers and those looking for a peaceful escape.
+        vistas make it a popular activity for both thrill-seekers and those looking for a peaceful escape.
       </p>
       <ul>
         <li><a href="http://google.com/" class="button" aria-label="Read more about Hot Air Ballooning">Read more</a>
@@ -46,10 +44,10 @@
 
   <main>
     <div class="card">
-      <img class="card-image" src="img/alps.png" alt="alps">
+      <img class="card-image" src="img/alps.png" alt="Scenic view of hiking trails in the Alps mountains">
       <div class="text-content">
-        <h3 tabindex="0">Alpine Hiking Trails</h3>
-        <p tabindex="0">Explore new hiking paths.</p>
+        <h3>Alpine Hiking Trails</h3>
+        <p>Explore new hiking paths.</p>
         <ul>
           <li><a href="http://google.com/" class="button" aria-label="Read more about Alpine Hiking Trails">Read
               more</a></li>
@@ -58,22 +56,22 @@
     </div>
 
     <div class="card">
-      <img class="card-image" src="img/kopenhamn.png" alt="Kopenhamn">
+      <img class="card-image" src="img/kopenhamn.png" alt="Floating gardens in the canals of Copenhagen">
       <div class="text-content">
-        <h3 tabindex="0">Floating Gardens</h3>
-        <p tabindex="0">New green spaces on city canals.</p>
+        <h3>Floating Gardens</h3>
+        <p>New green spaces on city canals.</p>
         <ul>
-          <li><a href="http://google.com/" class="button" aria-label="Read more about Alpine Hiking Trails">Read
-              more</a></li>
+          <li><a href="http://google.com/" class="button"
+              aria-label="Read more about Floating Gardens in Copenhagen">Read more</a></li>
         </ul>
       </div>
     </div>
 
     <div class="card">
-      <img class="card-image" src="img/ski-trip.png" alt="skitrip">
+      <img class="card-image" src="img/ski-trip.png" alt="A skier on fresh snow in Chamonix">
       <div class="text-content">
-        <h3 tabindex="0">Chamonix Ski Season</h3>
-        <p tabindex="0">Fresh snow and perfect conditions.</p>
+        <h3>Chamonix Ski Season</h3>
+        <p>Fresh snow and perfect conditions.</p>
         <ul>
           <li><a href="http://google.com/" class="button" aria-label="Read more about Chamonix Ski Season">Read more</a>
           </li>
@@ -82,12 +80,12 @@
     </div>
 
     <div class="card">
-      <img class="card-image" src="img/rome.png" alt="rome">
+      <img class="card-image" src="img/rome.png" alt="Rome's architectural mix of ancient and modern buildings">
       <div class="text-content">
-        <h3 tabindex="0">Rome's Architectural</h3>
-        <p tabindex="0">A mix of ancient and modern design.</p>
+        <h3>Rome's Architectural</h3>
+        <p>A mix of ancient and modern design.</p>
         <ul>
-          <li><a href="http://google.com/" class="button" aria-label="Read more about Rome's Architectural">Read
+          <li><a href="http://google.com/" class="button" aria-label="Read more about Rome's Architectural design">Read
               more</a></li>
         </ul>
       </div>
