--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="header-content">
       <div id="logo">
-        <img src="technigo-projects/project-news-site/code/image-logo.png/Vinify.png" alt="Logo de Vinify">
+        <img src="Vinify.png" alt="Logo of Vinify music">
       </div>
       <div>
         <h1>Viny-fy</h1>
