--- a/code/index.html
+++ b/code/index.html
@@ -93,8 +93,9 @@
       </ul>
       </section>
       <h1>See you next Week</h1>
-      <iframe src="https://giphy.com/embed/xUPOqo6E1XvWXwlCyQ" width="480" height="269" style="" frameBorder="0"
-        class="giphy-embed" allowFullScreen></iframe>
+      <iframe src="https://giphy.com/embed/xUPOqo6E1XvWXwlCyQ" width="480" height="269" frameborder="0"
+        class="giphy-embed" allowfullscreen=""></iframe>
+
       <p><a href="https://giphy.com/gifs/spacejam-space-jam-movie-xUPOqo6E1XvWXwlCyQ">via GIPHY</a></p>
     </footer>
   </main>
